Added Revenue Param and Updated folder structure
Added Revenue Param and Updated folder structure

--- a/app/code/Redeal/Referralmarketing/view/frontend/templates/checkout/success.phtml
+++ b/app/code/Redeal/Referralmarketing/view/frontend/templates/checkout/success.phtml
@@ -17,7 +17,9 @@
         $country = $objectManager->create('\Magento\Directory\Model\Country')->load($address['country_id'])->getName();
     }
        
-
+	$total = number_format($orderdetail->getGrandTotal(), 2, '.', '');
+	$tax = number_format($orderdetail->getTaxAmount(), 2, '.', '');
+	$revenue = $total - $tax;
      
        
         ?>
@@ -50,6 +52,7 @@
         id: "<?php echo $orderdetail->getIncrementId(); ?>",
         name: "<?php echo $firstname; ?>",
         total: "<?php echo number_format($orderdetail->getGrandTotal(), 2, '.', ''); ?>",
+		revenue: "<?php echo $revenue; ?>",
         price: "<?php echo number_format($orderdetail->getSubtotal(), 2, '.', ''); ?>",
         tax: "<?php echo number_format($orderdetail->getTaxAmount(), 2, '.', ''); ?>",
         shipping: "<?php echo number_format($orderdetail->getShippingAmount(), 2, '.', ''); ?>",
@@ -69,7 +72,7 @@
         'purchase': {
           'actionField': {
             'id': '<?php echo $orderdetail->getIncrementId()?>', 
-            'revenue': '<?php echo number_format($orderdetail->getGrandTotal(), 2, '.', ''); ?>',
+            'revenue': '<?php echo $revenue; ?>',
             'tax': '<?php echo number_format($orderdetail->getTaxAmount(), 2, '.', ''); ?>',
             'shipping': '<?php echo number_format($orderdetail->getShippingAmount(), 2, '.', ''); ?>',
             'currency': '<?php echo $orderdetail->getOrderCurrencyCode(); ?>',
@@ -93,6 +96,7 @@
     console.log("id: <?php echo $orderdetail->getIncrementId(); ?>,");
     console.log("name: <?php echo $firstname; ?>,");
     console.log("total: <?php echo number_format($orderdetail->getGrandTotal(), 2, '.', ''); ?>,");
+	console.log("revenue: <?php echo echo $revenue; ?>,");
     console.log("price: <?php echo number_format($orderdetail->getSubtotal(), 2, '.', ''); ?>,");
     console.log("tax: <?php echo number_format($orderdetail->getTaxAmount(), 2, '.', ''); ?>,");
     console.log("shipping: <?php echo number_format($orderdetail->getShippingAmount(), 2, '.', ''); ?>,");
@@ -108,7 +112,7 @@
     
     console.log("Google Tag Manager");
     console.log("id: <?php echo $orderdetail->getIncrementId(); ?>,");
-    console.log("revenue: <?php echo number_format($orderdetail->getGrandTotal(), 2, '.', ''); ?>,");
+    console.log("revenue: <?php echo $revenue; ?>,");
     console.log("tax: <?php echo number_format($orderdetail->getTaxAmount(), 2, '.', ''); ?>,");
     console.log("shipping: <?php echo number_format($orderdetail->getShippingAmount(), 2, '.', ''); ?>,");
     console.log("currency: <?php echo $orderdetail->getOrderCurrencyCode(); ?>,");
