--- a/code/Redeal/Referralmarketing/view/frontend/templates/checkout/gtm.phtml
+++ b/code/Redeal/Referralmarketing/view/frontend/templates/checkout/gtm.phtml
@@ -8,7 +8,7 @@ $write = $block->loadAllData();
 <?php if($checkmodule == 1){ 
 	$objectManager =\Magento\Framework\App\ObjectManager::getInstance();
 	$helper = $objectManager->get('Redeal\Referralmarketing\Helper\Data');
-	$containerId = $helper->getConfigValue('redeal_general/general/containerid');
+	//$containerId = $helper->getConfigValue('redeal_general/general/containerid');
 
 	$storeManager = $objectManager->get('\Magento\Store\Model\StoreManagerInterface');
 	$baseurl = $storeManager->getStore()->getBaseUrl();
@@ -27,7 +27,7 @@ $write = $block->loadAllData();
 		(function(i,s,o,g,r,a,m){i['RedealObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window, document, 'script', window.location.protocol + '<?php echo $redlurl;?>', 'redeal');
 	</script>
 
-	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=<?php echo $containerId; ?>" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!--<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=<?php// echo $containerId; ?>" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>-->
 
 	<?php }
 } ?>
